# CAT-Chalmers-Aero-Team

CAT 24/25/: CAT kladd.py  nowingtip2.csv  nowingtip2_excel.xlsx  plot_cl_x.py  servos.py  tapered_wing.py  wingbox.py  wingtip2.csv
CAT 24_25/: CAT MISSION.py  CAT.py  SANS logo.py  budget_flying_day.py  imports.py  nowingtip2.csv  nowingtip2.xlsx  openvsp.py  wingtip2.csv  wingtip2_excel.xlsx
CAT 25/26/: mission.py
CAT 25/26/Progress reports/: IPR_v2.py  SPR_v2.py  parser_v2.py  run_analysis_v2.py
CAT 25_26/: Selig.csv  battery_capacity.py  mission_script_lite.py  payload.py  tail_design.py  water_dispenser.py
CAT 25_26/Attendance/: attendance.py  attendance_report.md  team_members.txt  w45_attendance_report.md
CAT 25_26/Avionics/: servos_v2.py
CAT 25_26/Avionics/Servos/: servos.py  servos_v2.py
CAT 25_26/Payload/: water_dispenser.py
CAT 25_26/Progress reports/: SPR_v2.py  parser_v2.py  run_analysis_v2.py
CAT 25_26/Progress reports/42/: Compiled_IPR_W42.md  IPR_Plans_W42.md  IPR_Progress_W42.md
CAT 25_26/Progress reports/43/: Compiled_IPR_W43.md  IPR_Plans_W43.md  IPR_Problems_W43.md  IPR_Progress_W43.md
CAT 25_26/Progress reports/44/: Compiled_IPR_W44.md  IPR_Plans_W44.md  IPR_Problems_W44.md  (+1 more)
CAT 25_26/Servos/: servos_v2.py
CAT 25_26/cat-mission-tools/: README.md  pyproject.toml
CAT 25_26/cat-mission-tools/cat_mission_tools/: CAT_mission_simulator.py  aircraft.py  components.py  utils.py
CAT 25_26/cat-mission-tools/cat_mission_tools/tests/: test_components.py  test_utils.py
CAT 25_26/mission_script/: CAT_mission_simulator.py
(+25 files in other folders)
