# This code is part of the CAT mission tools
#
# (C) Copyright Chalmers Aero Team 2026
#
# This code is licensed under the Apache License, Version 2.0. You may
# obtain a copy of this license in the LICENSE.txt file in the root directory
# of this source tree or at http://www.apache.org/licenses/LICENSE-2.0.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals.

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cat-mission-tools"
version = "2026.01.0"
description = "Mission tools for the Chalmers Aero Team"
readme = "README.md"
authors = [
    { name = "Petter Miltén", email = "milten@chalmers.se" },
    { name = "Martin Stjernkvist", email = "marstje@student.chalmers.se" },
    { name = "Stefan Hill", email = "stefanhi@chalmers.se" }
]
maintainers = [
    { name = "Chalmers Aero Team", email = "aeroteam@chalmers.se" }
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "black>=24.10.0",
    "isort>=5.12.0",
    "pylint>=3.3.8"
]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=7.0.0",
]

[tool.setuptools]
packages = ["cat_mission_tools"]
